--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,6 +25,7 @@ ext.versionAppCompat = '28.0.0'
 ext.versionRetrofit = '2.4.0'
 ext.versionOkHttpLogingInterceptor = '3.6.0'
 ext.versionGlide = "4.8.0"
+ext.versionMoxy = "1.5.5"
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
@@ -51,6 +52,10 @@ dependencies {
     implementation "com.android.support:appcompat-v7:$versionAppCompat"
     implementation "com.android.support:support-v4:$versionAppCompat"
     implementation "com.android.support:cardview-v7:$versionAppCompat"
+
+    implementation "com.arello-mobile:moxy-app-compat:$versionMoxy"
+    annotationProcessor "com.arello-mobile:moxy-compiler:$versionMoxy"
+
 
 
 
